Remove principal stress directions

--- a/index.html
+++ b/index.html
@@ -81,43 +81,30 @@
             <section id="principal_stresses">
                 <h3>Principal Stresses</h3>
                 <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Stress</th>
-                            <th>Value</th>
-                            <th>Direction</th>
-                        </tr>
-                    </thead>
                     <tbody>
                         <tr>
                             <td>&sigma;<sub>1</sub></td>
                             <td class="text_output">{{ Number(P1).toLocaleString(undefined, {maximumSignificantDigits: 5}) }}</td>
-                            <td class="text_output strikethrough">{{ P1_vec }}</td>
                         </tr>
                         <tr>
                             <td>&sigma;<sub>2</sub></td>
                             <td class="text_output">{{ Number(P2).toLocaleString(undefined, {maximumSignificantDigits: 5}) }}</td>
-                            <td class="text_output strikethrough">{{ P2_vec }}</td>
                         </tr>
                         <tr>
                             <td>&sigma;<sub>3</sub></td>
                             <td class="text_output">{{ Number(P3).toLocaleString(undefined, {maximumSignificantDigits: 5}) }}</td>
-                            <td class="text_output strikethrough">{{ P3_vec }}</td>
                         </tr>
                         <tr>
                             <td>&tau;<sub>1</sub></td>
                             <td class="text_output">{{ Number(tau_1).toLocaleString(undefined, {maximumSignificantDigits: 5}) }}</td>
-                            <td class="text_output"></td>
                         </tr>
                         <tr>
                             <td>&tau;<sub>2</sub></td>
                             <td class="text_output">{{ Number(tau_2).toLocaleString(undefined, {maximumSignificantDigits: 5}) }}</td>
-                            <td class="text_output"></td>
                         </tr>
                         <tr>
                             <td>&tau;<sub>3</sub></td>
                             <td class="text_output">{{ Number(tau_3).toLocaleString(undefined, {maximumSignificantDigits: 5}) }}</td>
-                            <td class="text_output"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -180,6 +167,14 @@
             </section>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </body>
 </html>
